--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap');
 
 html, body {
   width: 100vw;
@@ -8,9 +9,14 @@ html, body {
 
 html, body, main, header, nav, section, footer, main, p, h1, h2, h3, h4, ul, li, img, div {
   display: block;
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 a {
@@ -20,7 +26,7 @@ a {
 html {
   font-size: 20px;
   color: var(--main-text-color);
-  font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 :root {
