--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -45,6 +45,7 @@ ul {
   --layout-color-1: #FAF2FF;
   --layout-color-2: #FCB834;
   --layout-color-3: #80abf33b;
+  --layout-color-4: #fcb8343b;
   --white: #FFFFFF;
   --black: #000000;
   --gray: #CCCCCC;
